--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,15 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Ryan D Kim"
+site_theme               : "air" # Currently available options are "default", "air"
+title                    : "Ryan Kim"
 title_separator          : "-"
 name                     : &name "Ryan Kim"
-description              : &description "Ryan's portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : rkydin.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+description              : &description "Ryan's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+url                      : https://rkydin.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Rkydin/rkydin.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,28 +24,37 @@ repository               : "Rkydin/rkydin.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Ryan Kim"
+  name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
-  bio              : "Welcome to my engineering portfolio. I'll be showcasing plenty of things here during my unemployment so please enjoy your time here and hire me"
-  location         : "NJ"
-  employer         : "Rutgers University"
+  bio              : "Short biography for the left-hand sidebar"
+  location         : "Earth"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : "rdky404@gmail.com" 
+  email            : "none@example.org" 
 
   # Academic websites
-  academia         : "Rutgers University"
+  academia         : # URL
+  arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  inspire-hep      : # URL
+  impactstory      : # URL
+  orcid            : "https://orcid.org/yourorcidurl"
+  semantic         : # URL
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : # URL
+  scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "Rkydin"
+  github           : "academicpages"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : 
+  bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -54,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "www.linkedin.com/in/ryandki"
+  linkedin         : # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
