--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : &name "Ryan Kim"
 description              : &description "Ryan's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : "https://rkydin.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "Rkydin/rkydin.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
@@ -82,11 +82,11 @@ author:
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   books:
-    title: 'Books'
+    title: 
   manuscripts:
-    title: 'Journal Articles'    
+    title:     
   conferences:
-    title: 'Conference Papers'
+    title: 
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
