Update employer information in config file

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Welcome to my engineering portfolio where I'll be putting all my stuff while I'm unemployed. Please hire me... "
   location         : "NJ"
-  employer         : "Rutgers University"
+  employer         : "Rutgers University (B.S. Biomedical Engineering, 2025)"
   uri              : # URL
   email            : "rdky404@gmail.com" 
 
