--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,8 @@ staticman:
 atom_feed:
   hide                   : true     # change to true to hide the RSS feed in the footer
   path                   : # blank (default) uses feed.xml
-
+head_scripts:
+  - /assets/css/custom.css
 
 # SEO Related
 google_site_verification :
