--- a/_config.yml
+++ b/_config.yml
@@ -270,14 +270,14 @@ defaults:
       share: true
       comments: true
   # _portfolio
+# _portfolio
   - scope:
       path: ""
       type: portfolio
     values:
-      layout: single
+      layout: portfolio
       author_profile: true
-      share: true
-      comment: true
+      share: false
   # _talks
   - scope:
       path: ""
