--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Ryan Kim"
   pronouns         : # example: "she/her"  
-  bio              : "Welcome to my engineering portfolio where I'll be putting all my stuff while I'm unemployed. Please hire me... "
+  bio              : "Welcome to my engineering portfolio where I'll be putting all my stuff"
   location         : "NJ"
   employer         : "Rutgers University"
   uri              : # URL
