--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ author:
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
-  steam            : "https://steamcommunity.com/id/Rkydin"
+  steam            : 
   telegram         : # URL
   tumblr           : # Username
   twitter          : # Username for X / Twitter
