--- a/_config.yml
+++ b/_config.yml
@@ -26,18 +26,11 @@ author:
   avatar           : "profile.png"
   name             : "Ryan Kim"
   pronouns         : # example: "she/her"  
-  bio              : "Welcome to my engineering portfolio where I'll be putting all my stuff."
+  bio              : "Welcome to my engineering portfolio where I'll be putting all my stuff"
   location         : "NJ"
   employer         : "Robomekanics"
-  
-  # Education
-  education:
-    - degree: "MS Mechanical Engineering"
-      university: "Northeastern University"
-      year: "Expected 2026 fall"
-    - degree: "BS Biomedical Engineering"  
-      university: "Rutgers University"
-      year: "2025"
+  uri              : # URL
+  email            : "rdky404@gmail.com"
   
   uri              : # URL
   email            : "rdky404@gmail.com"
